# approximation_alarm

./: .gitignore  CMakeLists.txt  README.md  armgcc_s130_nrf51422_xxac.ld  armgcc_s130_nrf51822_xxaa.ld  armgcc_s130_nrf51822_xxab.ld  beacon.c  debug_server_nrf51  runtime.cpp
